Added to lab notebook, removed diffusion creep from base file.

--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -43,20 +43,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "presidential-pierce",
+   "metadata": {},
+   "source": [
+    "### 3/15/21 ###\n",
+    "* Reverting back to dislocation creep only models until we can troubleshoot diffusion creep. Running models as described in 3/12, but using only dislocation creep base.\n",
+    "* No checkpoint available for this model, so need to start with just halfway to breakup, then run second model to breakup from there."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "collective-context",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reference model to breakup\n",
-    "ripropagate.generate(etime=12,output='./ref_breakup',ver='a') \n",
-    "\n",
     "# Reference model halfway to breakup\n",
-    "ripropagate.generate(etime=6,output='./ref_half',ver='b') \n",
+    "ripropagate.generate(etime=6,output='./ref_half',ver='a') \n",
     "\n",
     "# Asymmetric model test run\n",
-    "ripropagate.generate(etime=20,lthick=80,evel=2,output='./asymm_rift',ver='c') "
+    "ripropagate.generate(etime=20,lthick=80,evel=2,output='./asymm_rift',ver='b') "
    ]
   },
   {
