Updated lab notebook.

--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "normal-remains",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "presidential-pierce",
+   "id": "alpine-birth",
    "metadata": {},
    "source": [
     "### 3/15/21 ###\n",
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "collective-context",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Reference model halfway to breakup\n",
-    "ripropagate.generate(etime=6,output='./ref_half',ver='a') \n",
+    "ripropagate.generate(etime=6,output='./031521_ri_a',ver='a') \n",
     "\n",
     "# Asymmetric model test run\n",
-    "ripropagate.generate(etime=20,lthick=80,evel=2,output='./asymm_rift',ver='b') "
+    "ripropagate.generate(etime=20,lthick=80,evel=2,output='./031521_ri_b',ver='b') "
    ]
   },
   {
