Updated lab notebook.

--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -44,12 +44,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alpine-birth",
+   "id": "classical-consumption",
    "metadata": {},
    "source": [
     "### 3/15/21 ###\n",
     "* Reverting back to dislocation creep only models until we can troubleshoot diffusion creep. Running models as described in 3/12, but using only dislocation creep base.\n",
-    "* No checkpoint available for this model, so need to start with just halfway to breakup, then run second model to breakup from there."
+    "* No checkpoint available for this model, so need to start with just halfway to breakup, then run second model to breakup from there.\n",
+    "* Models submitted to queue as 7429640(a) and 7429649(b)"
    ]
   },
   {
