Updated notebook. Changed maximum timestep to 10000.

--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -68,9 +68,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "convenient-prison",
+   "metadata": {},
+   "source": [
+    "### 3/17/21 ###\n",
+    "* 031521_a crashed at 5.6 Myr. Considering restart with 10000 year maximum timestep."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binary-horse",
+   "id": "extended-assault",
    "metadata": {},
    "outputs": [],
    "source": []
