--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -69,17 +69,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convenient-prison",
+   "id": "fossil-upper",
    "metadata": {},
    "source": [
     "### 3/17/21 ###\n",
-    "* 031521_a crashed at 5.6 Myr. Considering restart with 10000 year maximum timestep."
+    "* 031521_a crashed at 5.6 Myr. Restarting with 10000 year maximum timestep."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "continued-calculator",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=6,output='./031521_ri_a_restart',ver='a') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extended-assault",
+   "id": "partial-resolution",
    "metadata": {},
    "outputs": [],
    "source": []
