Notebook updates. Changed base prm to 5000 years.

--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -87,9 +87,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "binding-briefing",
+   "metadata": {},
+   "source": [
+    "### 3/19/21 ###\n",
+    "* Models both finished. a_restart completed. b timed out after 48 hours at ~17 Myr. Reached breakup at ~11 Myr\n",
+    "* Next model run\n",
+    "    * a. continue a_restart to 12 Myr\n",
+    "    * b. invert a_restart for 20 Myr at 1 cm\n",
+    "    * c. Run b again to get to halfway breakup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "eight-indicator",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12,output='./031921_ri_a',ver='a')\n",
+    "ripropagate.generate(etime=26,evel=-1,output='./031921_ri_b',ver='b') \n",
+    "ripropagate.generate(etime=5.5,lthick=80,evel=2,output='./031921_ri_c',ver='c') "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "partial-resolution",
+   "id": "starting-chorus",
    "metadata": {},
    "outputs": [],
    "source": []
