Updated lab notebook.

--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "normal-remains",
    "metadata": {},
    "outputs": [],
@@ -112,9 +112,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "planned-radio",
+   "metadata": {},
+   "source": [
+    "### 3/21/21 ###\n",
+    "* Models finished. a and c successful. b crashed during inversion at ~7.6 Myr. Plan to change all models to 5000 year max timestep.\n",
+    "* Next steps:\n",
+    "    * Invert  031921_a (new a)\n",
+    "    * Restart 031921_b with lower timestep (new b)\n",
+    "    * Invert 031921_c (new c)\n",
+    "    * Continue 031921_c to 11 Myr (d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "final-pilot",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32,evel=-1,output='./032121_ri_a',ver='a')\n",
+    "ripropagate.generate(etime=26,evel=-1,output='./032121_ri_b',ver='b') \n",
+    "ripropagate.generate(etime=25.5,lthick=80,evel=-1,output='./032121_ri_c',ver='c')\n",
+    "ripropagate.generate(etime=11,lthick=80,evel=2,output='./032121_ri_d',ver='d')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "starting-chorus",
+   "id": "declared-tribune",
    "metadata": {},
    "outputs": [],
    "source": []
