Updated lab notebook.

--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -139,9 +139,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "rotary-sapphire",
+   "metadata": {},
+   "source": [
+    "### 3/22/21 ###\n",
+    "* Model d finished. Need to start inversion (new d). Other 3 are still running."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "excellent-single",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=31,lthick=80,evel=-1,output='./032221_ri_d',ver='d')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "declared-tribune",
+   "id": "durable-moldova",
    "metadata": {},
    "outputs": [],
    "source": []
