Updated lab notebook.

--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -140,17 +140,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rotary-sapphire",
+   "id": "unexpected-fields",
    "metadata": {},
    "source": [
     "### 3/22/21 ###\n",
-    "* Model d finished. Need to start inversion (new d). Other 3 are still running."
+    "* Model d finished. Need to start inversion (new d). Other 3 are still running.\n",
+    "* Checked this model and noted that full breakup not really reached at 11 Myr this time. Inverting anyway, but may need to be more careful about replicating with same composition file for future model runs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "excellent-single",
+   "id": "indoor-silver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "durable-moldova",
+   "id": "technical-announcement",
    "metadata": {},
    "outputs": [],
    "source": []
