Updates to lab notebook.

--- a/ri_lab_notebook.ipynb
+++ b/ri_lab_notebook.ipynb
@@ -159,9 +159,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "convertible-hours",
+   "metadata": {},
+   "source": [
+    "### 3/30/21 ###\n",
+    "* a-c models finished a few days ago with no issues.\n",
+    "* d model finished today. Had to restart after MPI system error stopped it for a while."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "technical-announcement",
+   "id": "fossil-jordan",
    "metadata": {},
    "outputs": [],
    "source": []
