Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd6ba128",
+   "id": "6d3e4979",
    "metadata": {},
    "source": [
     "### 6/29/21 ###\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fossil-jordan",
    "metadata": {},
    "outputs": [],
@@ -49,9 +49,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ce51620",
+   "metadata": {},
+   "source": [
+    "* Test model ran successfully. Putting the same model into Stampede2 with a 12 Myr runtime."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ec727d82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12,output='./062921_ri') "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1180343",
+   "id": "c25c94c1",
    "metadata": {},
    "outputs": [],
    "source": []
