Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -67,9 +67,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "007b1229",
+   "metadata": {},
+   "source": [
+    "### 7/2/21 ###\n",
+    "* Elasticity appears to have worked. Runinng the same model at 300 km depth. now."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c25c94c1",
+   "id": "caab8274",
    "metadata": {},
    "outputs": [],
    "source": []
