Modified files to extend depth to 300 km. Also fixed variable lithospheric thickness in base prm file.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "normal-remains",
    "metadata": {},
    "outputs": [],
@@ -68,17 +68,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "007b1229",
+   "id": "bfb7565b",
    "metadata": {},
    "source": [
-    "### 7/2/21 ###\n",
-    "* Elasticity appears to have worked. Runinng the same model at 300 km depth. now."
+    "### 7/3/21 ###\n",
+    "* Elasticity appears to have worked. Runinng the same model at 300 km depth now. Made necessary changes to prm and composition files.\n",
+    "* Running test on local machine first."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1fac8b48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./070321_ri') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caab8274",
+   "id": "cb2d2209",
    "metadata": {},
    "outputs": [],
    "source": []
