Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "normal-remains",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fossil-jordan",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ec727d82",
    "metadata": {},
    "outputs": [],
@@ -68,18 +68,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfb7565b",
+   "id": "4abd2271",
    "metadata": {},
    "source": [
     "### 7/3/21 ###\n",
     "* Elasticity appears to have worked. Runinng the same model at 300 km depth now. Made necessary changes to prm and composition files.\n",
-    "* Running test on local machine first."
+    "* Running test on local machine first.\n",
+    "* Needed to modify base prm temperature function to have variable lithospheric thickness. Neglected to do this previously."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1fac8b48",
+   "id": "3b3fe70d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +88,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "109416d8",
+   "metadata": {},
+   "source": [
+    "* Test looks good. Running on Stampede2 for 12 Myr."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5a41d6ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12,output='./070321_ri') "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb2d2209",
+   "id": "0371113e",
    "metadata": {},
    "outputs": [],
    "source": []
