Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "normal-remains",
    "metadata": {},
    "outputs": [],
@@ -106,9 +106,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7df6292d",
+   "metadata": {},
+   "source": [
+    "### 7/5/21 ### \n",
+    "* Stampede2 model looks good, ran for 4.1 Myr in 48 hours. \n",
+    "* Increasing the depth to 400 km, testing on local machine first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "70d96ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./070521_ri_test') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "622263eb",
+   "metadata": {},
+   "source": [
+    "* Test failed due to segmentation fault. Suspect this may be due to a local machine issue. Going to try a full run on Stampede 2 for 12 Myr to see if same problem arises."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0bdb49e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12,output='./070521_ri') "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0371113e",
+   "id": "90cb9613",
    "metadata": {},
    "outputs": [],
    "source": []
