Changed base file to have diffusion creep with geometric averaging.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -144,9 +144,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e63b271a",
+   "metadata": {},
+   "source": [
+    "### 7/9/21 ###\n",
+    "* Model ran successfully on Stampede2. \n",
+    "* Planning to try adding diffusion creep back in by changing viscous flow law to composite and adding diffusion creep prefactors, grain size exponenets, activation energies/volumes.\n",
+    "* Trying a local test first but don't expect it to succeed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90cb9613",
+   "id": "b64b58dd",
    "metadata": {},
    "outputs": [],
    "source": []
