Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -145,19 +145,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63b271a",
+   "id": "41f960d1",
    "metadata": {},
    "source": [
     "### 7/9/21 ###\n",
-    "* Model ran successfully on Stampede2. \n",
+    "* Model ran successfully on Stampede2, but only 3.3 Myr in 48 hours. \n",
     "* Planning to try adding diffusion creep back in by changing viscous flow law to composite and adding diffusion creep prefactors, grain size exponenets, activation energies/volumes.\n",
-    "* Trying a local test first but don't expect it to succeed."
+    "* Trying a local test first but don't expect it to succeed. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a3bdaf3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./070921_ri_test') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "463175e3",
+   "metadata": {},
+   "source": [
+    "* Yep, failed twice with core dump. Trying on stampede instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "679e214e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12,output='./070921_ri') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b64b58dd",
+   "id": "80ef10cd",
    "metadata": {},
    "outputs": [],
    "source": []
