Changed viscosity averaging to harmonic and updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -183,9 +183,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7db5f490",
+   "metadata": {},
+   "source": [
+    "### 7/10/21 ###\n",
+    "* Model had convergence error after only 90,000 years.\n",
+    "* Trying it again with harmonic viscosity averaging instead of geometric in case that makes a difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "828eb1ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12,output='./071021_ri') "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80ef10cd",
+   "id": "ef1df63f",
    "metadata": {},
    "outputs": [],
    "source": []
