Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -203,9 +203,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4743b6e4",
+   "metadata": {},
+   "source": [
+    "### 7/12/21 ###\n",
+    "* Didn't make any difference, model crashed at same time with same error.\n",
+    "* Going to create a new branch for removing diffusion creep and testing the dislocation/400km model with a higher timestep 10000 years to test speed/stability."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef1df63f",
+   "id": "a5bbb48c",
    "metadata": {},
    "outputs": [],
    "source": []
