Changed timestep to 10000 year and updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4743b6e4",
+   "id": "0c58908f",
    "metadata": {},
    "source": [
     "### 7/12/21 ###\n",
@@ -215,10 +215,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5bbb48c",
+   "id": "3ddd205f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ripropagate.generate(etime=12,output='./071221_ri') "
+   ]
   }
  ],
  "metadata": {
