lab notebook updated.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "normal-remains",
    "metadata": {},
    "outputs": [],
@@ -204,23 +204,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c58908f",
+   "id": "93fa1802",
    "metadata": {},
    "source": [
     "### 7/12/21 ###\n",
     "* Didn't make any difference, model crashed at same time with same error.\n",
-    "* Going to create a new branch for removing diffusion creep and testing the dislocation/400km model with a higher timestep 10000 years to test speed/stability."
+    "* Going to remove diffusion creep and test the dislocation/400km model with a higher timestep 10000 years to test speed/stability."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9d64ec9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=20,output='./071221_ri') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ddd205f",
+   "id": "51917dbe",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ripropagate.generate(etime=12,output='./071221_ri') "
-   ]
+   "source": []
   }
  ],
  "metadata": {
