Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -223,9 +223,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42ad3b45",
+   "metadata": {},
+   "source": [
+    "### 7/17/21 ###\n",
+    "* Model ran successfully, timed out after ~6 Myr\n",
+    "* Will need underlying improvements to ASPECT code to improve model runtime and add additional features. Currently suspending model runs until that is accomplished."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51917dbe",
+   "id": "e09875c2",
    "metadata": {},
    "outputs": [],
    "source": []
