Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "normal-remains",
    "metadata": {},
    "outputs": [],
@@ -233,9 +233,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1f451f7",
+   "metadata": {},
+   "source": [
+    "### 7/26/21 ###\n",
+    "* Debugging diffusion creep without elasticity getting in the way. Kept a version of the prm (ri_base_elasticity) that maintains elasticity with no dislocation creep.\n",
+    "* Base PRM altered to have no elasticity but diffusion creep. Testing that first before creating additional versions with diffusion creep in lithosphere and/or a higher minimum viscosity (1e19)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a9e34bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./072621_ri_a_test',ver='a') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d162ff3f",
+   "metadata": {},
+   "source": [
+    "* Ran this locally. Viscosity structure seems reasonable (Christmas tree look) but did still go down to minimum values of 1e18.\n",
+    "* Trying additional versions of this with diffusion creep in the mantle lithosphere and minimum viscosity set to 1e19."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cbcf9def",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./072621_ri_b_test',ver='b',file='ri_base_mlith.prm') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e71d2868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./072621_ri_c_test',ver='c',file='ri_base_19.prm') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2fa06504",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./072621_ri_d_test',ver='d',file='ri_base_mlith19.prm') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49735b9f",
+   "metadata": {},
+   "source": [
+    "* Models ran successfully - all are producing the minimum viscosity (1e18 or 1e19) at the base of the lithosphere. Going to analytically compute these profiles to see if they are correct."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e09875c2",
+   "id": "0718b784",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -243,7 +310,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
