increased minimum viscosities to 1e19 or 1e20 in other variants.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -300,9 +300,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c021c76",
+   "metadata": {},
+   "source": [
+    "### 7/28/21 ###\n",
+    "* Analytical results suggest diffusion creep does produce very low viscosities. Going to try running a series of models with minimum viscosity at 1e19 or 1e20 with/without diffusion creep in the mantle lithosphere."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0718b784",
+   "id": "1d0a6020",
    "metadata": {},
    "outputs": [],
    "source": []
