Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "normal-remains",
    "metadata": {},
    "outputs": [],
@@ -301,19 +301,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c021c76",
+   "id": "4c2a8bc5",
    "metadata": {},
    "source": [
     "### 7/28/21 ###\n",
-    "* Analytical results suggest diffusion creep does produce very low viscosities. Going to try running a series of models with minimum viscosity at 1e19 or 1e20 with/without diffusion creep in the mantle lithosphere."
+    "* Analytical results suggest diffusion creep does produce very low viscosities. Going to try running a series of models on Stampede2 with minimum viscosity at 1e19 or 1e20 with/without diffusion creep in the mantle lithosphere."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1d0a6020",
+   "execution_count": 4,
+   "id": "72527ce7",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=20,output='./072821_ri_a',ver='a') \n",
+    "ripropagate.generate(etime=20,output='./072821_ri_b',ver='b',file='ri_base_mlith.prm')\n",
+    "ripropagate.generate(etime=20,output='./072821_ri_c',ver='c',file='ri_base_20.prm') \n",
+    "ripropagate.generate(etime=20,output='./072821_ri_d',ver='d',file='ri_base_mlith20.prm') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6daaebc9",
+   "metadata": {},
    "source": []
   }
  ],
