Updated lab notebook.

--- a/ri_lab_notebook_JuneJuly2021.ipynb
+++ b/ri_lab_notebook_JuneJuly2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "normal-remains",
    "metadata": {},
    "outputs": [],
@@ -325,6 +325,27 @@
    "cell_type": "markdown",
    "id": "6daaebc9",
    "metadata": {},
+   "source": [
+    "* Decided to add 2 additional models with minimum viscosity at 1e18 just for comparison."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f1924e10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=20,output='./072821_ri_e',ver='e',file='ri_base_18.prm') \n",
+    "ripropagate.generate(etime=20,output='./072821_ri_f',ver='f',file='ri_base_mlith18.prm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34d410f1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
