Updated lab notebook.

--- a/ri_lab_notebook_August2021.ipynb
+++ b/ri_lab_notebook_August2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8a470fd6",
    "metadata": {},
    "outputs": [],
@@ -37,9 +37,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f1223ed4",
+   "metadata": {},
+   "source": [
+    "### 8/4/21 ###\n",
+    "* 1e18 models finished as well. No convergence errors but only ran to about 7 Myr. No weird field mixing.\n",
+    "* Realized this whole set of models was accidentally run with max non-linear iterations at 1 instead of 100; have reverted that now, but not sure how it might have influenced results, especially speeds.\n",
+    "* Currently setting base model to minimum viscosity of 1e20 with diffusion creep in asthenosphere only. Added particle tracing following John's continental extension cookbook template.\n",
+    "* Stampede2 now upgraded to dealii 9.3.0 and ASPECT 2.4.0-pre, so future models being run on that. Still having issues getting it locally.\n",
+    "* Going to run a test of this new setup with time set to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "714569cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./080421_ri_test') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88a3ba8c",
+   "metadata": {},
+   "source": [
+    "* This seems to have worked ok once particle number was upped to 48e4. Going to try running this for real."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "db34fcda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=20,output='./080421_ri') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17d5aa2e",
+   "metadata": {},
+   "source": [
+    "### 8/5/21 ###\n",
+    "* This model crashed after about 2.5 Myr with an error with particle generation\n",
+    "* Need to check with John about this error. In the meantime, going to re-run a version of this model without particles for direct comparison (and the right number of nonlinear iterations)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "60db58e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./080521_ri_test',file='ri_base_nopart.prm') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "562ef2b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=20,output='./080521_ri',file='ri_base_nopart.prm') "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25b422b5",
+   "id": "f2b6eb4f",
    "metadata": {},
    "outputs": [],
    "source": []
