Updated lab notebook.

--- a/ri_lab_notebook_August2021.ipynb
+++ b/ri_lab_notebook_August2021.ipynb
@@ -108,9 +108,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ecbdbbb",
+   "metadata": {},
+   "source": [
+    "### 8/6/21 ###\n",
+    "* 0805 model is still running, but going to try reducing the number of particles and allowing cells to not have particles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f1ade80c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,output='./080621_ri_test',file='ri_base.prm') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d2294b1",
+   "metadata": {},
+   "source": [
+    "### 8/9/21 ###\n",
+    "* This test failed, still got angry about cells without particles even though I tried to enable that. Seems in idev testing that changing interpolation to \"cell average\" may help.\n",
+    "* 0805 model is done and looks good - actually ran to completion (20 Myr) in less than 48 hours - due to 2.4 upgrade or lack of noninitial strain field?\n",
+    "* Cell average test (0806 ca) actually worked. Going to try running this to 20 Myr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8db797ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=20,output='./080921_ri',file='ri_base.prm') "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2b6eb4f",
+   "id": "73c0e585",
    "metadata": {},
    "outputs": [],
    "source": []
