Updated lab notebook.

--- a/ri_lab_notebook_August2021.ipynb
+++ b/ri_lab_notebook_August2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8a470fd6",
    "metadata": {},
    "outputs": [],
@@ -148,9 +148,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14742732",
+   "metadata": {},
+   "source": [
+    "### 8/11/21 ###\n",
+    "* Made some underlying Python code changes. Geotherm has now been moved to a function in the geophysics module of geoscripts. Composition has been added to ripropagate and so composition files will now be produced here in the notebooks. The \"generate\" function now also has the ability to change strain softening values with the parameter \"soft.\"\n",
+    "* Going to try inverting the 0809 model to see how that works and if particle tracing stays consistent.\n",
+    "* Cell average particle interpolation not ideal, so may need to adjust that method in the future."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1b926ebc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=20,evel=-1,output='./081121_ri',soft=0.375) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73c0e585",
+   "id": "0cca366d",
    "metadata": {},
    "outputs": [],
    "source": []
