--- a/ri_lab_notebook_August2021.ipynb
+++ b/ri_lab_notebook_August2021.ipynb
@@ -169,9 +169,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45ff2c3f",
+   "metadata": {},
+   "source": [
+    "* Cell average particles model was really wonky. Cancelling the inversion for now."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cca366d",
+   "id": "ee27a109",
    "metadata": {},
    "outputs": [],
    "source": []
