Changed no particles PRM to have variable strain softening.

--- a/ri_lab_notebook_August2021.ipynb
+++ b/ri_lab_notebook_August2021.ipynb
@@ -177,12 +177,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c3fc72a",
+   "metadata": {},
+   "source": [
+    "### 8/12/21 ###\n",
+    "* Realized that these aren't passive particles, so need to have an adequate number. Going to revise particle number back to 48e4 but keep cell averaging to see if it avoids errors.\n",
+    "* Also going to invert the no particles model from last week to make sure diffusion creep working ok."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee27a109",
+   "id": "83329604",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ripropagate.generate(etime=20,evel=-1,output='./080521_ri_a',file='ri_base_nopart.prm',soft=0.375,ver='a') "
+   ]
   }
  ],
  "metadata": {
