Broke out mesh loading function for computationally intensive particle meshes.

--- a/ri_lab_notebook_August2021.ipynb
+++ b/ri_lab_notebook_August2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8a470fd6",
    "metadata": {},
    "outputs": [],
@@ -188,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "293106f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ripropagate.generate(etime=20,evel=-1,output='./081221_ri_a',file='ri_base_nopart.prm',soft=0.375,ver='a') "
+    "ripropagate.generate(etime=40,evel=-1,output='./081221_ri_a',file='ri_base_nopart.prm',soft=0.375,ver='a') "
    ]
   },
   {
@@ -231,9 +231,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "149713e8",
+   "metadata": {},
+   "source": [
+    "### 8/13/21 ###\n",
+    "* The particles model (b) still failed after ~1.6 Myr, with same error as before. Cell average and increasing the number of particles didn't solve the problem."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e23d8681",
+   "id": "c4a80826",
    "metadata": {},
    "outputs": [],
    "source": []
