Updated lab notebook.

--- a/ri_lab_notebook_August2021.ipynb
+++ b/ri_lab_notebook_August2021.ipynb
@@ -182,7 +182,7 @@
    "metadata": {},
    "source": [
     "### 8/12/21 ###\n",
-    "* Realized that these aren't passive particles, so need to have an adequate number. Going to revise particle number back to 48e4 but keep cell averaging to see if it avoids errors.\n",
+    "* Realized that these aren't passive particles, so need to have an adequate number. Going to revise particle number back to 75e4 but keep cell averaging to see if it avoids errors.\n",
     "* Also going to invert the no particles model from last week to make sure diffusion creep working ok."
    ]
   },
@@ -240,9 +240,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fafa965d",
+   "metadata": {},
+   "source": [
+    "### 8/14/21 ###\n",
+    "* The inversion also failed almost immediately with a convergence error. Just changed the max timestep to 5000 years (only on Stampede2) and resubmitted to see if that helps.\n",
+    "* That didn't help, still failed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad880d5a",
+   "metadata": {},
+   "source": [
+    "### 8/19/21 ###\n",
+    "* Going to try increasing number of interations for particle generator in ASPECT source code to see if that improves model. Recompiled ASPECT with iterations increased from 100-200. First just testing that works with time = 0, then running a full test model. Model still named 0812_ri_b, just with .sh file updated and number of particle generation iterations added to directory name.\n",
+    "* Also going to retry the no particle diffusion creep model with only running extension to breakup at ~12.5 Myr. Using same strain softening and composition file as 0805 to ensure consistency."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f18753e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,output='./081921_ri_a',file='ri_base_nopart.prm',soft=0.375,ver='a') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abe5f0a0",
+   "metadata": {},
+   "source": [
+    "* Particles immediately failed at 200, 500, and 1000 iterations. Need a different solution for this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "774a4438",
+   "metadata": {},
+   "source": [
+    "### 8/30/21 ###\n",
+    "* Extension of 081921_ri_a completed, running an inversion now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1f4eb277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./083021_ri',file='ri_base_nopart.prm',soft=0.375) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e36c9752",
+   "metadata": {},
+   "source": [
+    "* This failed right away with a 10000 yr timestep, modified to 5000 years and restarted."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4a80826",
+   "id": "33675e1e",
    "metadata": {},
    "outputs": [],
    "source": []
