Updated lab notebook.

--- a/ri_lab_notebook_August2021.ipynb
+++ b/ri_lab_notebook_August2021.ipynb
@@ -301,7 +301,8 @@
    "id": "e36c9752",
    "metadata": {},
    "source": [
-    "* This failed right away with a 10000 yr timestep, modified to 5000 years and restarted."
+    "* This failed right away with a 10000 yr timestep, modified to 5000 years and restarted.\n",
+    "* That succeeded and ran ~16 Myr in 48 hours with realistic inversion."
    ]
   },
   {
